build/log/idf_py_stdout_output_3284
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/console_commands.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/console_commands.c.obj 
/home/mariem/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mariem/AP_displayer/build/config -I/home/mariem/AP_displayer/main -I/home/mariem/esp-idf/components/newlib/platform_include -I/home/mariem/esp-idf/components/freertos/config/include -I/home/mariem/esp-idf/components/freertos/config/include/freertos -I/home/mariem/esp-idf/components/freertos/config/xtensa/include -I/home/mariem/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mariem/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mariem/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/mariem/esp-idf/components/freertos/esp_additions/include -I/home/mariem/esp-idf/components/esp_hw_support/include -I/home/mariem/esp-idf/components/esp_hw_support/include/soc -I/home/mariem/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/mariem/esp-idf/components/esp_hw_support/dma/include -I/home/mariem/esp-idf/components/esp_hw_support/ldo/include -I/home/mariem/esp-idf/components/esp_hw_support/debug_probe/include -I/home/mariem/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/mariem/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/mariem/esp-idf/components/heap/include -I/home/mariem/esp-idf/components/heap/tlsf -I/home/mariem/esp-idf/components/log/include -I/home/mariem/esp-idf/components/soc/include -I/home/mariem/esp-idf/components/soc/esp32s3 -I/home/mariem/esp-idf/components/soc/esp32s3/include -I/home/mariem/esp-idf/components/soc/esp32s3/register -I/home/mariem/esp-idf/components/hal/platform_port/include -I/home/mariem/esp-idf/components/hal/esp32s3/include -I/home/mariem/esp-idf/components/hal/include -I/home/mariem/esp-idf/components/esp_rom/include -I/home/mariem/esp-idf/components/esp_rom/esp32s3/include -I/home/mariem/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/mariem/esp-idf/components/esp_rom/esp32s3 -I/home/mariem/esp-idf/components/esp_common/include -I/home/mariem/esp-idf/components/esp_system/include -I/home/mariem/esp-idf/components/esp_system/port/soc -I/home/mariem/esp-idf/components/esp_system/port/include/private -I/home/mariem/esp-idf/components/xtensa/esp32s3/include -I/home/mariem/esp-idf/components/xtensa/include -I/home/mariem/esp-idf/components/xtensa/deprecated_include -I/home/mariem/esp-idf/components/lwip/include -I/home/mariem/esp-idf/components/lwip/include/apps -I/home/mariem/esp-idf/components/lwip/include/apps/sntp -I/home/mariem/esp-idf/components/lwip/lwip/src/include -I/home/mariem/esp-idf/components/lwip/port/include -I/home/mariem/esp-idf/components/lwip/port/freertos/include -I/home/mariem/esp-idf/components/lwip/port/esp32xx/include -I/home/mariem/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mariem/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/mariem/esp-idf/components/esp_wifi/include -I/home/mariem/esp-idf/components/esp_wifi/include/local -I/home/mariem/esp-idf/components/esp_wifi/wifi_apps/include -I/home/mariem/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/mariem/esp-idf/components/esp_event/include -I/home/mariem/esp-idf/components/esp_phy/include -I/home/mariem/esp-idf/components/esp_phy/esp32s3/include -I/home/mariem/esp-idf/components/esp_netif/include -I/home/mariem/esp-idf/components/nvs_flash/include -I/home/mariem/esp-idf/components/esp_partition/include -I/home/mariem/esp-idf/components/spiffs/include -I/home/mariem/esp-idf/components/vfs/include -I/home/mariem/esp-idf/components/console -I/home/mariem/esp-idf/components/esp_vfs_console/include -I/home/mariem/AP_displayer/managed_components/espressif__esp_lcd_ili9341/include -I/home/mariem/esp-idf/components/driver/deprecated -I/home/mariem/esp-idf/components/driver/i2c/include -I/home/mariem/esp-idf/components/driver/touch_sensor/include -I/home/mariem/esp-idf/components/driver/twai/include -I/home/mariem/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/mariem/esp-idf/components/esp_pm/include -I/home/mariem/esp-idf/components/esp_ringbuf/include -I/home/mariem/esp-idf/components/esp_driver_gpio/include -I/home/mariem/esp-idf/components/esp_driver_pcnt/include -I/home/mariem/esp-idf/components/esp_driver_gptimer/include -I/home/mariem/esp-idf/components/esp_driver_spi/include -I/home/mariem/esp-idf/components/esp_driver_mcpwm/include -I/home/mariem/esp-idf/components/esp_driver_ana_cmpr/include -I/home/mariem/esp-idf/components/esp_driver_i2s/include -I/home/mariem/esp-idf/components/esp_driver_sdmmc/include -I/home/mariem/esp-idf/components/sdmmc/include -I/home/mariem/esp-idf/components/esp_driver_sdspi/include -I/home/mariem/esp-idf/components/esp_driver_sdio/include -I/home/mariem/esp-idf/components/esp_driver_dac/include -I/home/mariem/esp-idf/components/esp_driver_rmt/include -I/home/mariem/esp-idf/components/esp_driver_tsens/include -I/home/mariem/esp-idf/components/esp_driver_sdm/include -I/home/mariem/esp-idf/components/esp_driver_i2c/include -I/home/mariem/esp-idf/components/esp_driver_uart/include -I/home/mariem/esp-idf/components/esp_driver_ledc/include -I/home/mariem/esp-idf/components/esp_driver_parlio/include -I/home/mariem/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/mariem/esp-idf/components/esp_lcd/include -I/home/mariem/esp-idf/components/esp_lcd/interface -I/home/mariem/esp-idf/components/esp_lcd/rgb/include -I/home/mariem/AP_displayer/managed_components/lvgl__lvgl -I/home/mariem/AP_displayer/managed_components/lvgl__lvgl/src -I/home/mariem/AP_displayer/managed_components -I/home/mariem/AP_displayer/managed_components/lvgl__lvgl/examples -I/home/mariem/AP_displayer/managed_components/lvgl__lvgl/demos -I/home/mariem/esp-idf/components/esp_timer/include -I/home/mariem/esp-idf/examples/common_components/protocol_examples_common/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/mariem/AP_displayer=. -fmacro-prefix-map=/home/mariem/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -DESP_LCD_ILI9341_VER_MAJOR=1 -DESP_LCD_ILI9341_VER_MINOR=2 -DESP_LCD_ILI9341_VER_PATCH=0 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/console_commands.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/console_commands.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/console_commands.c.obj -c /home/mariem/AP_displayer/main/console_commands.c
/home/mariem/AP_displayer/main/console_commands.c: In function 'register_nok_list':
/home/mariem/AP_displayer/main/console_commands.c:152:18: error: 'nok_list' undeclared (first use in this function); did you mean 'ok_list'?
  152 |         .func = &nok_list,
      |                  ^~~~~~~~
      |                  ok_list
/home/mariem/AP_displayer/main/console_commands.c:152:18: note: each undeclared identifier is reported only once for each function it appears in
/home/mariem/AP_displayer/main/console_commands.c: At top level:
/home/mariem/AP_displayer/main/console_commands.c:165:12: warning: 'nok_list' defined but not used [-Wunused-function]
  165 | static int nok_list(int argc, char ** argv)
      |            ^~~~~~~~
/home/mariem/AP_displayer/main/console_commands.c:145:13: warning: 'register_nok_list' defined but not used [-Wunused-function]
  145 | static void register_nok_list()
      |             ^~~~~~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/mariem/AP_displayer/build/bootloader/esp-idf/esptool_py && /home/mariem/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/mariem/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/mariem/AP_displayer/build/bootloader/bootloader.bin
Bootloader binary size 0x5190 bytes. 0x2e70 bytes (36%) free.
ninja: build stopped: subcommand failed.
